tests/NormalTests/paczka1/small_fuzzy/44748373.err
Error in line 3: Cn7G5sd1WcY S820 11,7
Error in line 4: cgqwN2FfVB8 A743 11,5
Error in line 7: cgqwN2FfVB8 A949 7,4
Error in line 11: cgqwN2FfVB8 S820 2,9
